# Life-os

./: .dockerignore  .env.example  .env.local.template  .env.production.example  .env.staging.example  .gitattributes  .gitignore  AGENTS.md  Dockerfile  README.md  SPEC-KIT-GUIDE.md  components.json  constitution.md  docker-compose.yml  implementation_plan.md.resolved  next.config.js  package-lock.json  package.json  reset-config.ts  tailwind.config.ts  test-adapters.ts  test-adzuna.ts  test-config.ts  test-pdf.ts  test-pipeline.ts  test-read.ts  tsconfig.json  vitest.config.ts
deploy/: cloudflared.example.yml  env.example  life-os.service  setup-vm.sh  update.sh
docs/: application-complete-explanation.md  opencode-privacy.md  opencode-star-story-template.md  repo-safety-patch.md
features/ai-telemetry/: plan.md  spec.md  tasks.md
features/application-outcomes-etl/: plan.md  (+2 more)
public/: .gitkeep
python-ai/: .gitignore  Dockerfile  README.md  pyproject.toml
python-ai/life_os_ai/: __init__.py  __main__.py  app.py  llm.py  profile.py  schemas.py  validator.py
python-ai/life_os_ai/tasks/: __init__.py  applications.py  evaluate_job.py  extract_candidate_profile.py  parse_job.py
python-ai/tests/: test_parse_and_evaluate.py
scripts/: clean-next-artifacts.mjs  cleanup-off-target-jobs.mjs  export-workspace-json.mjs  extract_pdf_text.py  local-doctor.ps1  local-start.ps1  migrate-local-to-supabase.ts  worker.mjs
verification-plan/: README.md  chunk-1-career-ai.md  chunk-2-jobs-pipeline.md  chunk-3-storage-auth.md  chunk-4-life-os-surfaces.md  chunk-5-worker-deploy.md
(+428 files in other folders)
