[project]
name = "life-os-ai"
version = "0.1.0"
description = "Python AI sidecar for Life OS. Gemini/OpenAI-backed parse + evaluate + enrichment."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Life OS" }]

dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "pydantic>=2.8",
  "httpx>=0.27",
  "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["life_os_ai"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]  # formatter handles long lines

[tool.pytest.ini_options]
testpaths = ["tests"]
